--- a/CSS/main.css
+++ b/CSS/main.css
@@ -5,13 +5,14 @@ body {
     gap: 20px;
     margin: 0px;
     background-color: black;
+    font-family: 'Protest Riot', sans-serif;
 }
 
 h1 {
-    color:white;
+    color: white;
 }
 
-p{
+p {
     margin-top: 6px;
     text-align: center;
     color: white;
@@ -22,17 +23,35 @@ p{
     grid-row-start: 1;
     text-align: center;
 }
-#gameWindow{
+
+#gameWindow {
     position: relative;
     width: 800px;
     height: 608px;
     grid-column-start: 2;
     grid-row-start: 2;
     background-color: blue;
-    background-image:url("../assets/img/tilemap1.jpg");
+    background-image: url("../assets/img/tilemap1.jpg");
     border: white 1px solid;
 }
-#inventoryBox{
+
+/*Main character*/
+#mainCharacter {
+    width: 32px;
+    height: 32px;
+    background-color: rgb(53, 188, 195);
+    left: 380px;
+    top: 144px;
+}
+
+#tilemap {
+    width: 800px;
+    height: 608px;
+    top: 0px;
+    left: 0px;
+}
+
+#inventoryBox {
     position: relative;
     display: block;
     left: 10px;
@@ -45,37 +64,70 @@ p{
     padding: 10px;
 }
 
-#dialogBar{
+#dialogBar {
     bottom: 0px;
 }
 
-#setMainDialog{
+#setMainDialog {
     position: relative;
     height: 64px;
     width: 800px;
 }
 
-.foreground{
-    position: absolute;
-    z-index: 1000;
-}
-#brownBar{
+#brownBar {
     width: 800px;
     height: 50px;
     background-color: rgb(122, 90, 34);
     border-top: white 1px solid;
 }
-#mainCharacterSpeech{
-left: 0px;
-bottom: 0px;
-width: 100px;
-height: 100px;
 
-}
-#counterSpeech{
-    right: 0px;
+#mainCharacterSpeech {
+    left: 0px;
     bottom: 0px;
+    background-color: azure;
     width: 100px;
     height: 100px;
-   
+
+}
+
+#counterSpeech {
+    right: 0px;
+    bottom: 0px;
+    background-color: azure;
+    width: 100px;
+    height: 100px;
+}
+
+#door1 {
+    left: 495px;
+    top: 78px;
+    width: 37px;
+    height: 48px;
+    background-color: rgb(165, 42, 114);
+    opacity: 0.5;
+}
+
+#door2 {
+    left: 175px;
+    top: 303px;
+    width: 37px;
+    height: 48px;
+    background-color: rgb(165, 42, 114);
+    opacity: 0.5;
+}
+
+.foreground {
+    position: absolute;
+    z-index: 1000;
+}
+
+.heroCharacter {
+    position: absolute;
+    z-index: 100;
+    transition: all 1s ease-in-out;
+}
+
+.background {
+    position: absolute;
+    z-index: 0;
 }
